# AUR-Training-25

./: humidity_node.py  monitor_node.py  package.xml  setup.cfg  setup.py  task2_1.py  task2_2.py  task3subtask1.py  task3subtask2.py  temperature_node.py  test.py  timer_node.py  turtle_node.py
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/mypkg/lib/mypkg/: distance_node  speed_node  subscriber_node
install/mypkg/share/mypkg/: package.sh  package.xml
install/weather_pkg/lib/weather_pkg/: humidity_node  monitor_node  pressure_node  temperature_node
install/weather_pkg/share/weather_pkg/: package.sh  package.xml
launch/: turtle_chase_launch.py
turtle_pkg/: colcon_command_prefix_setup_py.sh.env
turtlenew_pkg/: turtle_chase.py
weather_pkg/: colcon_command_prefix_setup_py.sh.env
